# stm32_layered_event-driven_architecture

./: .gitignore  .mxproject  CMakeLists.txt  README.md  README_2.md  stm32_blinking_led.ioc  stm32_project.jdebug
App/: CMakeLists.txt  app.c
App/features/: featBlinky.c  featBlinky.h  feat_blinky.c  feat_blinky.h  feat_temperature_sensor.c  feat_temperature_sensor.h  feature.c  feature.h
App/peripherals/: TemperatureDisplay.h  ath25.c  ath25.h  ips_display.c  ips_display.h  temperature_sensor.c  temperature_sensor.h
Application/: CMakeLists.txt  app_main.c  app_main.h  config.h  state_machine.c  state_machine.h
Core/Inc/: FreeRTOSConfig.h  main.h  performance_monitor.h  stm32f7xx_hal_conf.h  (+1 more)
Drivers_BSP/: CMakeLists.txt
Drivers_custom/: CMakeLists.txt
HAL/: CMakeLists.txt  hal_delay.c  hal_delay.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_rtc.c  hal_rtc.h  hal_spi.c  hal_spi.h  hal_uart.c  hal_uart.h
Hardware/: CMakeLists.txt  pinout.h
Middleware/: CMakeLists.txt
Middleware/SEGGER/: CMakeLists.txt
Middleware/SEGGER/Config/: SEGGER_SYSVIEW_Config_FreeRTOS.c
Middleware/SEGGER/SEGGER/: SEGGER_SYSVIEW_Conf.h
OS/: CMakeLists.txt  event_bus.c  event_bus.h  os_config.h  os_tasks.c  os_tasks.h  os_wrapper.c  os_wrapper.h
Utils/: CMakeLists.txt  rtt_logging_test.c  sensor_ring_buffer.c  sensor_ring_buffer.h  systemview_demo.c
config_default/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  stm32_blinking_led.elf  stm32_blinking_led.map
datasheets/: electrical diagram.drawio
docs/: example_performance_integration.c
(+50 files in other folders)
